applications/mindspore-website-backup/remove-wwwingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: mindspore-www-website-ingress
$patch: delete
